<resources>
    <string name="app_name">Speaking city - service</string>
    <string name="login_txt_login_hint">Login</string>
    <string name="login_txt_password_hint">Password</string>
    <string name="login_btn">Sign in</string>
    <string name="login_txt_label">Service</string>
    <string name="about_main_label">About a program</string>

    <string name="main_basic_scanner_btn">WiFi</string>
    <string name="main_ble_scanner_btn">Bluetooth</string>
    <string name="main_update_os_btn">OS</string>
    <string name="main_update_stm_btn">STM</string>
    <string name="main_update_content_btn">Content</string>
    <string name="main_config_transport_btn">Transport</string>
    <string name="main_config_station_btn">Objects</string>
    <string name="main_menu_main_label">Main menu</string>
    <string name="update_btn_check">Download the update</string>
    <string name="content_btn_send">Send</string>
    <string name="content_btn_rasp">Rasp</string>
    <string name="content_btn_stm">STM</string>
    <string name="content_btn_all">All</string>

    <string name="content_btn_clear">Clear rasp</string>
    <string name="content_label_reboot">Reboot</string>


    <string name="basic_scan_main_txt_label">Basic scan</string>
    <string name="ble_scan_main_txt_label">Bluetooth scan</string>
    <string name="update_os_main_txt_label">Update OS</string>
    <string name="update_stm_main_txt_label">Update stm</string>
    <string name="update_content_main_txt_label">Update content</string>
    <string name="config_transp_main_txt_label">Config transp</string>
    <string name="config_stat_main_txt_label">Config station</string>

    <string name="doorsOpened">Landing is allowed</string>
    <string name="doorsClosed">The doors are closed</string>
    <string name="doorsBroken">Be careful, the condition of the doors is not monitoring </string>
    <string name="content_transport_number_hint">Number</string>
    <string name="content_transport_litera1_hint">Litera1</string>
    <string name="content_transport_litera2_hint">Litera2</string>
    <string name="content_transport_litera3_hint">Litera3</string>


    <string name="mobile_conf">Mobile configurator</string>
    <string name="hotspot_dialog_title">Access point settings</string>
    <string name="hotspot_dialog_message">To use all the features of the app, you need to enable the access point (named \"SpeakService\").
        Set up the access point?</string>
    <string name="spoiler">Reboot / clear</string>


    <array name="directions">
        <item name="park">Park</item>
        <item name="direct">Dir</item>
        <item name="reverse">Rev</item>
    </array>

    <string name="do_not_ask_again">Do not ask again</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="mobile_internet_title">Internet required</string>
    <string name="mobile_internet_message">Please check the internet connection</string>
    <string name="main_settings_btn">App settings</string>
    <string name="settings_show_access_point_dialog">Show access point dialog</string>
    <string name="zummer_type_hint">Zummer type</string>
    <string name="zummer_volume_hint">Zummer volume</string>
    <string name="floor_hint">Floor</string>
    <string name="serial">Serial number</string>
    <string name="current_incr">Current version</string>
    <string name="server_incr">Actual version</string>
    <string name="configuration">Configuration</string>
    <string name="updating">Updating</string>
    <string name="scanner">Scanner</string>
    <string name="storage_os">Storage OS</string>
    <string name="release_os">Release OS</string>
    <string name="downloaded">Downloaded</string>
    <string name="uploaded">Uploaded</string>
    <string name="confirmation_is_required">Confirmation is required</string>
    <string name="version">version</string>
    <string name="confirm_reboot_of">Confirm the reboot of</string>
    <string name="ask_clear_the_transiver">Clear this transiver?</string>
    <string name="stm_rebooted">Stm rebooted</string>
    <string name="all_rebooted">All rebooted</string>

    <string name="content_updated">Content updated</string>
    <string name="rasp_was_cleared">Rasp was cleared</string>
    <string name="successful">Successful</string>
    <string name="incorrect_autorization">Incorrect login or password</string>
    <string name="server_not_response">The server do not response</string>
    <string name="main_stm_log_btn">Stm log</string>
    <string name="show_stm_log">Show stm log</string>
    <string name="clear_stm_log">Clear stm log</string>
    <string name="settings">Settings</string>
    <string name="main_settings_wifi_btn">Wifi</string>
    <string name="show_settings_wifi">Show wifi settings</string>
    <string name="set_default_wifi_settings">Set default wifi settings</string>
    <string name="add_new_wifi_settings">Set additional wifi network parameters</string>
    <string name="add_new_wifi_title">Set additional wifi network parameters</string>
    <string name="main_settings_network_btn">Network</string>
    <string name="show_settings_network">Show ethernet settings</string>
    <string name="set_default_network_settings">Set default ethernet settings</string>
    <string name="add_new_network_settings">Set ethernet interface parameters</string>
    <string name="set_ethernet_params_title">Set ethernet interface parameters</string>
    <string name="main_settings_scuart_btn">ScUart</string>
    <string name="main_settings_update_php_btn">Update PHP</string>
    <string name="main_settings_update_core_btn">Update the core</string>

    <string name="remember_me">Remember me</string>
    <string name="confirm_upload_update_os">Confirm the upload of the updates</string>
    <string name="upload_btn">Upload</string>
    <string name="update_btn">Update</string>
    <string name="cancel_btn">Cancel</string>
    <string name="hotspot_settings_btn">Hotspot settings</string>

</resources>
