<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorConfiguration"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scanner"
                android:padding="5dp"
                android:textSize="20dp"
                android:gravity="center|center_vertical"/>

        <Button
            android:id="@+id/main_basic_scanner_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_basic_scanner_btn"
            style="@style/MainMenuBtnStyle"

            />


        <Button
            android:id="@+id/main_ble_scanner_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_ble_scanner_btn"
            style="@style/MainMenuBtnStyle"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorConfiguration">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updating"
                android:padding="5dp"
                android:textSize="20dp"
                android:gravity="center|center_vertical"/>

        <Button
            android:id="@+id/main_update_os_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_update_os_btn"
            style="@style/MainMenuBtnStyle" />

        <Button
            android:id="@+id/main_update_stm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_update_stm_btn"
            style="@style/MainMenuBtnStyle"
            android:visibility="gone"/>

        <Button
            android:id="@+id/main_update_content_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_update_content_btn"
            style="@style/MainMenuBtnStyle"/>

            <Button
                android:id="@+id/main_stm_log_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_stm_log_btn"
                style="@style/MainMenuBtnStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorConfiguration">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuration"
                android:padding="5dp"
                android:textSize="20dp"
                android:gravity="center|center_vertical"/>
            <Button
                android:id="@+id/main_config_transport_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_config_transport_btn"
                style="@style/MainMenuBtnStyle"/>
            <Button
                android:id="@+id/main_config_station_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_config_station_btn"
                style="@style/MainMenuBtnStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorConfiguration">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:padding="5dp"
                android:textSize="20dp"
                android:gravity="center|center_vertical"/>
            <Button
                android:id="@+id/main_settings_wifi_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_settings_wifi_btn"
                style="@style/MainMenuBtnStyle"/>
            <Button
                android:id="@+id/main_settings_network_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_settings_network_btn"
                style="@style/MainMenuBtnStyle"/>
        </LinearLayout>
        <Button
            android:id="@+id/main_settings_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_settings_btn"
            style="@style/MainMenuBtnStyle"/>
    </LinearLayout>

    </ScrollView>

