<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">
    <TextView
        android:id="@+id/settings_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"/>
    <LinearLayout
        android:id="@+id/reboot_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/show_settings_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/show_settings_wifi"/>
        <Button
            android:id="@+id/set_default_wifi_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/set_default_wifi_settings"/>
        <Button
            android:id="@+id/add_new_wifi_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/add_new_wifi_settings"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>