<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="100px"
    android:background="#FFFFFF">
    <ImageView
        android:id="@+id/login_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logo"
        android:layout_width="500px"
        android:layout_height="500px"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:scaleType="fitStart"/>
    <TextView
        android:id="@+id/logo"
        app:layout_constraintTop_toBottomOf="@id/login_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_txt_label"
        android:textSize="@dimen/login_txt"
        android:textStyle="bold"
        android:layout_marginBottom="100px"
        android:gravity="center" />
    <EditText
        android:id="@+id/login_txt_login"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/login_txt"
        android:hint="@string/login_txt_login_hint"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/login_txt_password"
        app:layout_constraintTop_toBottomOf="@id/login_txt_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rememberMeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/login_txt"
        android:hint="@string/login_txt_password_hint"
        android:maxLines="1"
        android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/rememberMeChk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/rememberMeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rememberMeTv"
        app:layout_constraintBottom_toBottomOf="@id/rememberMeTv"/>

    <TextView
        android:id="@+id/rememberMeTv"
        app:layout_constraintTop_toBottomOf="@id/login_txt_password"
        app:layout_constraintStart_toEndOf="@id/rememberMeChk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textSize="@dimen/login_txt"
        android:textColor="@color/colorRemember"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"


        />


    <Button
        android:id="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/rememberMeTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/login_txt"
        android:text="@string/login_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>