<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">

    <EditText
        android:id="@+id/content_txt_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_txt"
        android:padding="5dp"
        android:visibility="gone"
        android:maxLines="1"
        android:layout_margin="15dp"/>

    <Spinner
        android:id="@+id/content_spn_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/content_txt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_txt"
        android:padding="5dp"
        android:visibility="gone"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/content_txt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_txt"
        android:padding="5dp"
        android:visibility="gone"
        android:layout_margin="15dp"/>

    <Spinner
        android:id="@+id/content_spn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="15dp"/>


    <Spinner
        android:id="@+id/content_spn_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="15dp"/>


    <Spinner
        android:id="@+id/content_spn_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="15dp"/>


    <TextView
        android:id="@+id/content_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_txt"
        android:padding="5dp"
        android:text="@string/content_label_reboot"
        android:gravity="center"
        android:layout_marginTop="100px"
        android:layout_marginBottom="20px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/content_btn_rasp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/content_btn_rasp"/>
        <Button
            android:id="@+id/content_btn_stm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/content_btn_stm"/>


    </LinearLayout>


    <Button
        android:id="@+id/content_btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_btn_clear"
        android:layout_marginTop="30px"
        android:enabled="false"/>

    <Button
        android:id="@+id/content_btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_btn_send"
        android:layout_marginTop="30px"
        android:enabled="false"/>

</LinearLayout>
</ScrollView>