<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ProgressBar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/progressTv"
            android:id="@+id/scanner_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:visibility="gone"
            android:progressDrawable="@drawable/progress_bar"
            android:indeterminateOnly="false"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/scanner_progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scanner_timer"
            android:id="@+id/progressTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@id/progressTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scanner_label0"
            android:id="@+id/scanner_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginHorizontal="50px"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="@dimen/login_txt"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            app:layout_constraintTop_toBottomOf="@id/scanner_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scanner_label1"
            android:id="@+id/scanner_label0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginHorizontal="50px"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="@dimen/login_txt"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/scanner_label0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scanner_btn"
            android:id="@+id/scanner_label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginHorizontal="50px"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="@dimen/login_txt"/>
        <Button
            app:layout_constraintTop_toBottomOf="@id/scanner_label1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/downloadCoreUpdateFilesBtn"
            android:id="@+id/scanner_btn"
            android:text="@string/update_btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginHorizontal="50px"
            android:layout_marginTop="10dp" />

        <Button
            app:layout_constraintTop_toBottomOf="@id/scanner_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/downloadCoreUpdateFilesTv"
            android:id="@+id/downloadCoreUpdateFilesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="Загрузить с сервера файлы для обновления ядра"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/downloadCoreUpdateFilesBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/update_content_label"
            android:id="@+id/downloadCoreUpdateFilesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:gravity="left"/>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/downloadCoreUpdateFilesTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_scanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/update_content_label"
            android:visibility="gone"
            android:padding="10dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serial"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_weight="1"
                android:textAlignment="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_incr"
                android:layout_weight="1"
                android:textAlignment="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_incr"
                android:layout_weight="1"
                android:textAlignment="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            app:layoutManager="LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/update_content_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/rv_scanner"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

